# artaalenc

Assignment2/: assignment.cabal
Assignment2/src/: Arrow.hs  Parser.hs  Parser.info  Parser.y  ParserPoging.txt  Scanner.hs  Scanner.x  StructuurEnVraag.txt  Tokens.hs  tokens.x
Assignment3/: testexpressies.txt
Assignment3/src/: 01-test-task01.ssm  02-test-task02.ssm  03-test-task03.ssm  05-test-task05.ssm  CSharpAlgebra.hi  CSharpAlgebra.hs  CSharpCode.hi  CSharpCode.hs  CSharpGram.hi  CSharpGram.hs  CSharpLex.hi  CSharpLex.hs  Main.hi  Main.hs  SSM.hi
Assignment3/test-cases/: 01-test-task01.cs
