name:                Assignment2
version:             0.1.0.0
license-file:        LICENSE
author:              Berk en Lawko
build-type:          Simple
cabal-version:       >=1.10

executable Assignment2
  main-is:             Arrow.hs
  build-depends:       base >= 4 && < 5,
                       uu-tc,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
